<resources>
    <string name="app_name">evetagenda</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">ΑΡΧΙΚΗ</string>
    <string name="menu_gallery">ΓΚΑΛΕΡΙ</string>
    <string name="menu_slideshow">ΠΑΡΟΥΣΙΑΣΗ</string>
    <string name="prescription">ΙΑΤΡΙΚΗ ΣΥΝΤΑΓΗ</string>
    <string name="customers">ΠΕΛΑΤΕΣ</string>
    <string name="agenda">ΑΤΖΕΝΤΑ</string>
    <string name="visits">ΕΠΙΣΚΕΨΕΙΣ</string>
    <string name="recipe">ΑΓΩΓΗ</string>
    <string name="notes">ΣΗΜΕΙΩΣΕΙΣ</string>
    <string name="todolist">ΥΠΟΧΡΕΩΣΕΙΣ</string>
    <string name="other">ΕΠΙΠΛΕΟΝ</string>
    <string name="about_us">ΣΧΕΤΙΚΑ ΜΕ ΕΜΑΣ</string>
    <string name="title_activity_login">Evetagenda</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">ΚΩΔΙΚΟΣ</string>
    <string name="action_sign_in">ΣΥΝΔΕΣΗ</string>
    <string name="action_sign_in_short">ΣΥΝΔΕΣΗ</string>
    <string name="welcome">"ΚΑΛΩΣ ΗΡΘΑΤΕ !"</string>
    <string name="invalid_username">ΜΗ ΕΓΚΥΡΟ ΟΝΟΜΑ ΧΡΗΣΤΗ</string>
    <string name="invalid_password">Ο ΚΩΔΙΚΟΣ ΠΡΕΠΕΙ ΝΑ ΑΠΟΤΕΛΕΙΤΕ ΤΟΥΛΑΧΙΣΤΟΝ ΑΠΟ 5 ΨΗΦΙΑ</string>
    <string name="login_failed">"Η ΣΥΝΔΕΣΗ ΑΠΕΤΥΧΕ"</string>
    <string name="title_activity_start">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">ΕΠΟΜΕΝΟ</string>
    <string name="previous">ΠΡΟΗΓΟΥΜΕΝΟ</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_note">MainActivity</string>
    <string name="title_home">ΑΡΧΙΚΗ</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">ΕΙΔΟΠΟΙΗΣΕΙΣ</string>
    <string name="please_wait">ΠΑΡΑΚΑΛΩ ΠΕΡΙΜΕΝΕΤΕ</string>


    <string-array name="spinnerItems">
        <item>item1</item>
        <item>item2</item>
        <item>item3</item>
        <item>item4</item>
    </string-array>
</resources>